--- a/styles/banner.css
+++ b/styles/banner.css
@@ -30,6 +30,18 @@
     font-weight: 400;
     text-align: center;
     color: var(--branco);
-    background: url("../img/lupa.svg") no-repeat;
-    
+    background: url("../img/lupa.svg") no-repeat;   
 }
+
+@media screen and (min-width: 1024px) {
+    .banner__titulo {
+        font-size: 36px;
+    }
+    .banner__pesquisa {
+        width: 50%;
+    }
+    .banner__pesquisa::placeholder {
+        background-position: em;
+    }
+}
+
