--- a/styles/header.css
+++ b/styles/header.css
@@ -7,6 +7,15 @@
     display: inline-block;
 }
 
+.container__botao:checked ~.container__rotulo>.cabecalho__menu-hamburguer {
+    background-image: url("../img/MenuAberto.svg");
+}
+
+.container__botao:checked ~.container__rotulo {
+    background: var(--azul-degrade);
+}
+
+
 .cabecalho {
     background-color: var(--branco);
     display: flex;
@@ -54,15 +63,10 @@
     text-transform: uppercase;
 }
 
-.container__botao {
-    display: none;
-}
-
-.container__titulo {
-    display: none;
-}
-
-.opcoes {
+.container__botao,
+.container__titulo,
+.opcoes,
+.container__texto {
     display: none;
 }
 
@@ -80,11 +84,14 @@
     .container__titulo--negrito {
         font-weight: 700;
     }
+    .cabecalho {
+        padding: 0 2em;
+    }
     .opcoes {
         display: flex;
     }
     .opcoes__item {
-        padding: 0 1em;
+        padding: 2em 1em;
         text-transform: uppercase;
     }
     .opcoes__link {
@@ -103,5 +110,36 @@
     }
     .opcoes-botao {
         display: none;
+    }
+    .opcoes-botao:checked~.opcoes__rotulo>.opcoes__item {
+        background: var(--azul-degrade);
+        color: var(--branco);
+    }
+    .lista-menu__item:hover {
+        background: var(--azul-degrade);
+        color: var(--branco);
+    }
+    .lista-menu__item:hover>.lista-menu__link {
+        -webkit-text-fill-color: var(--branco);
+        text-decoration: none;
+    }
+}
+
+@media screen and (min-width: 1728px) { 
+    .container__link {
+        display: flex;
+        align-items: center;
+        text-decoration: none;
+        color: var(--preto);
+    }
+
+    .cabecalho {
+        padding: 0 2em;
+    }
+    .opcoes {
+        margin-right: auto;
+    }
+    .container__texto {
+        display: block;
     }
 }
