--- a/styles/topicos.css
+++ b/styles/topicos.css
@@ -30,11 +30,18 @@
     font-weight: 700;
 }
 
+
 @media screen and (min-width: 1024px) {
     .topicos__titulo {
        font-size: 24px;  
     }
     .topicos__link {
         font-size: 24px;
+    }
+}
+
+@media screen and (min-width: 1728px) { 
+    .topicos {
+        padding: 3em 25vw;
     }
 }
