--- a/style.css
+++ b/style.css
@@ -1,9 +1,9 @@
-@import url("/styles/header.css");
-@import url("/styles/banner.css");
-@import url("/styles/carrossel.css");
-@import url("/styles/topicos.css");
-@import url("/styles/contatos.css");
-@import url("/styles/rodape.css");
+@import url("./styles/header.css");
+@import url("./styles/banner.css");
+@import url("./styles/carrossel.css");
+@import url("./styles/topicos.css");
+@import url("./styles/contatos.css");
+@import url("./styles/rodape.css");
 
 :root {
     --cor-de-findo: #EBECEE;
