--- a/styles/contatos.css
+++ b/styles/contatos.css
@@ -1,11 +1,11 @@
 .contato {
-    background-color: var(--branco);
+    background: var(--cor-de-fundo);
     padding: 1em;
 }
 
 .contato__titulo,
 .contato__texto {
-    background: var(--azul-degrade);
+    background: var(--azul-escuro);
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
     background-clip: text;
@@ -23,7 +23,8 @@
 
 .contato__email {
     padding: 1em;
-    border: 1px solid var(--azul);
+    border: 2px solid var(--rosa);
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     border-radius: 24px;
     width: 90%;
     color: var(--azul);
@@ -31,7 +32,7 @@
 
 .contato__email::placeholder {
     font-family: var(--fonte-principal);
-    color: var(--azul);
+    color: var(--azul-escuro);
     background: url("../img/Email.svg") no-repeat;
     padding-left: 2.5em;
 }
