--- a/styles/carrossel.css
+++ b/styles/carrossel.css
@@ -1,6 +1,6 @@
 .carrossel__titulo {
-    color: var(--laranja);
-    background-color: var(--branco);
+    color: var(--azul-claro);
+    background: var(--branco);
     text-align: center;
     text-transform: uppercase;
     font-size: 18px;
@@ -38,7 +38,7 @@
 }
 
 .card {
-    background: #FFFFFF;
+    background: var(--branco);
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     border-radius: 10px;
     margin: 1em;
@@ -46,18 +46,19 @@
 }
 
 .descricao__titulo {
-    color: var(--laranja);
+    color: var(--roxo);
     font-weight: 700;
 }
 
 .descricao__titulo-livro {
-    color: var(--azul);
+    color: var(--rosa);
     font-size: 18px;
     font-weight: 700;
     margin: 0.5em 0;
 }
 
 .descricao__texto {
+    color: var(--azul-escuro);
     font-size: 14px;
 }
 
@@ -66,11 +67,17 @@
 }
 
 .botoes__ancora {
-    background-color: var(--laranja);
+    background: var(--rosa);
+    border-radius: 10px;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     padding: 1em 2.2em;
     color: var(--branco);
     font-weight: 700;
     text-decoration: none;
+}
+
+.botoes__ancora:hover {
+    background: var(--rosa-hover);
 }
 
 .descricao__estrelas {
