--- a/styles/rodape.css
+++ b/styles/rodape.css
@@ -7,6 +7,10 @@ hr {
     padding: 1em;
 }
 
+.rodape__titulo {
+    color: var(--azul-escuro);
+}
+
 .lista-rodape {
     display: none;
 }
@@ -26,12 +30,13 @@ hr {
         margin: 0.6em 0;
     } 
     .lista-rodape__link  {
-        color: var(--cinza);
+        color: var(--azul-escuro);
         text-decoration: none;
         margin-left: 0.6em;
     }  
     .lista-rodape__titulo  {
-        color: var(--cinza-claro);
+        color: var(--azul-claro);
+        font-weight: bold;
         text-transform: uppercase;
         font-size: 14px;
     }       
