--- a/styles/rodape.css
+++ b/styles/rodape.css
@@ -15,6 +15,10 @@ hr {
     display: none;
 }
 
+.lista-rodape__item:hover {
+    font-weight: bold;
+}
+
 
 @media screen and (min-width: 1024px) {
     .rodape {
